--- a/frontend/src/pages/vagas/postVagas.scss
+++ b/frontend/src/pages/vagas/postVagas.scss
@@ -4,7 +4,7 @@
     justify-content: start;
     align-items: center;
     min-height: 60vh;
-    padding: 20px;
+    padding: 0;
     width: 100%;
     margin: 0 auto;
 
@@ -12,77 +12,79 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        flex-direction: row;
+        flex-direction: column;
         flex-wrap: wrap;
         background-color: #313131;
         max-width: 90%;
-        height: auto;
-        gap: 50px;
+        gap: 20px;
         margin-top: 20px;
-        padding: 40px;
-        padding-top: 80px;
+        padding: 20px;
         border-radius: 8px;
 
-        h2{
-            position: absolute;
-            top: 380px;
-        }
-
-        .vaga-item {
+        .itens{
             display: flex;
-            flex-direction: column;
+            flex-direction: row;
             justify-content: center;
             align-items: center;
+            width: 100%;
 
-            min-width: 400px;
-            max-width: 400px;
-            background-color: #f9f9f9;
-            border: 1px solid #ddd;
-            border-radius: 8px;
-            padding: 0;
-            box-shadow: 0px 5px 4px 0px rgba(0, 0, 0, 1);
-
-            transition: all ease-in-out 0.3s;
-
-            &:hover{
-                transform: scale(105%) translateY(-5px);
-            }
-
-            .titulo {
+            .vaga-item {
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
                 align-items: center;
-                margin: 0 0 10px 0;
-                border-radius: 8px 8px 0px 0px;
-                color: #333;
-                width: 100%;
-                height: 35px;
-                background-color: #c7c7c7;
-            }
 
-            .info{
-                display: flex;
-                justify-content: center;
-                align-items: start;
-                flex-direction: column;
-                white-space: normal;
-                word-break: break-all;
-                text-align: start;
-                gap: 15px;
-                padding: 0px 20px 20px 20px;
-                margin: 0px 20px 20px 20px;
-                width: 100%;
-                p {
-                    margin: 0px 0px 0px 15px;
-                    color: #666;
+                min-width: 400px;
+                max-width: 400px;
+                background-color: #f9f9f9;
+                border: 1px solid #ddd;
+                border-radius: 8px;
+                padding: 0;
+                box-shadow: 0px 5px 4px 0px rgba(0, 0, 0, 1);
+
+                transition: all ease-in-out 0.3s;
+
+                &:hover{
+                    transform: scale(105%) translateY(-5px);
                 }
 
-                strong {
+                .titulo {
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    align-items: center;
+                    margin: 0 0 10px 0;
+                    border-radius: 8px 8px 0px 0px;
                     color: #333;
+                    width: 100%;
+                    height: 35px;
+                    background-color: #c7c7c7;
+                }
+
+                .info{
+                    display: flex;
+                    justify-content: center;
+                    align-items: start;
+                    flex-direction: column;
+                    white-space: normal;
+                    word-break: break-all;
+                    text-align: start;
+                    gap: 15px;
+                    padding: 0px 20px 20px 20px;
+                    margin: 0px 20px 20px 20px;
+                    width: 100%;
+                    p {
+                        margin: 0px 0px 0px 15px;
+                        color: #666;
+                    }
+
+                    strong {
+                        color: #333;
+                    }
                 }
             }
         }
+        
     }
 
     .pre-input{
