Co-authored-by: Nicolas Freitas Souza <darktails076@gmail.com>

--- a/frontend/src/pages/login/login.scss
+++ b/frontend/src/pages/login/login.scss
@@ -16,6 +16,7 @@ $fonte-principal: Verdana, Geneva, Tahoma, sans-serif;
   min-height: 60vh;
   width: 100%;
   margin: 0 auto 4rem auto;
+  background-color: $cor-fundo;
 
   h2 {
     margin-top: 10rem;
