--- a/frontend/src/pages/perfil/perfil.scss
+++ b/frontend/src/pages/perfil/perfil.scss
@@ -93,6 +93,7 @@
                 box-shadow: 0px 2px 5px 1px rgba(0, 0, 0, 0.5);
                 background-color: #28a745;
                 color: white;
+                justify-content: center;
 
                 &:hover {
                     background-color: #218838;
@@ -103,6 +104,7 @@
                 box-shadow: 0px 2px 5px 1px rgba(0, 0, 0, 0.5);
                 background-color: #dc3545;
                 color: white;
+                justify-content: center;
 
                 &:hover {
                     background-color: #a11d2b;
@@ -169,8 +171,10 @@
 
             .modal-buttons {
             display: flex;
-            justify-content: space-between;
-            margin-top: 20px;
+            justify-content: center; 
+            align-items: center;      
+            gap: 15px;                
+            margin-top: 20px;       
 
             button {
                 border: none;
@@ -185,6 +189,7 @@
             .upload-button {
                 background-color: #28a745;
                 color: white;
+                justify-content: center;
 
                 &:hover {
                 background-color: #218838;
