--- a/frontend/src/pages/login/login.scss
+++ b/frontend/src/pages/login/login.scss
@@ -14,14 +14,14 @@ $fonte-principal: Verdana, Geneva, Tahoma, sans-serif;
   align-items: center;
   text-align: center;
   min-height: 60vh;
-  width: 100%;
-  margin: 0 auto 4rem auto;
+  max-width: 1646px;
+  margin: 0;
+  padding: 0;
   background-color: $cor-fundo;
 
-  h2 {
-    margin-top: 10rem;
-    margin-bottom: 2rem;
-    color: $cor-texto;
+  .login-title{
+    margin-bottom: 3rem;
+    color: white;
   }
 
   .login-form {
@@ -30,14 +30,15 @@ $fonte-principal: Verdana, Geneva, Tahoma, sans-serif;
     justify-content: center;
     gap: 1.8rem;
 
-    width: 60%;
+    min-width: 60%;
+    max-width: 60%;
 
-    input {
+    .input {
       font-size: 18px;
       background-color: #111;
       border: 1px solid #333;
       border-radius: 20px;
-      width: 97%;
+      width: 96.406%;
       height: 30px;
       padding: 0.6rem 1rem;
       color: $cor-texto;
@@ -49,6 +50,14 @@ $fonte-principal: Verdana, Geneva, Tahoma, sans-serif;
       &:focus {
         border-color: $cor-principal;
         outline: none;
+      }
+    }
+
+    .input-pass{
+      button{
+        color: white;
+        font-size: 18px;
+        margin-right: 20px;
       }
     }
     
