--- a/frontend/src/pages/perfil/perfil.scss
+++ b/frontend/src/pages/perfil/perfil.scss
@@ -130,7 +130,7 @@
             padding: 30px 40px;
             border-radius: 8px;
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
-            width: 600px;
+            min-width: max-content;
             max-width: 100%;
             text-align: center;
 
@@ -140,73 +140,79 @@
             }
 
             .edit-form {
-            display: flex;
-            flex-direction: column;
-            gap: 15px;
-
-            .form-group {
                 display: flex;
                 flex-direction: column;
-                align-items: flex-start;
+                gap: 15px;
 
-                label {
-                font-weight: bold;
-                margin-bottom: 5px;
-                color: #333;
+                .form-group {
+                    display: flex;
+                    flex-direction: column;
+                    align-items: flex-start;
+
+                    label {
+                    font-weight: bold;
+                    margin-bottom: 5px;
+                    color: #333;
+                    }
+
+                    input {
+                        width: 97%;
+                        padding: 8px 10px;
+                        border: 1px solid #ccc;
+                        border-radius: 5px;
+                        outline: none;
+
+                        &:focus {
+                            border-color: #007bff;
+                        }
+                    }
                 }
 
-                input {
-                width: 97%;
-                padding: 8px 10px;
-                border: 1px solid #ccc;
-                border-radius: 5px;
-                outline: none;
+                .modal-buttons {
+                    display: flex;
+                    justify-content: center; 
+                    align-items: center;      
+                    gap: 15px;                
+                    margin-top: 20px;       
 
-                &:focus {
-                    border-color: #007bff;
-                }
-                }
-            }
-            }
+                    button {
+                        border: none;
+                        padding: 8px 16px;
+                        border-radius: 5px;
+                        cursor: pointer;
+                        font-weight: bold;
+                        font-size: 16px;
+                        transition: all 0.3s ease;
+                    }
 
-            .modal-buttons {
-            display: flex;
-            justify-content: center; 
-            align-items: center;      
-            gap: 15px;                
-            margin-top: 20px;       
+                    .upload-button {
+                        background-color: #28a745;
+                        color: white;
+                        justify-content: center;
 
-            button {
-                border: none;
-                padding: 8px 16px;
-                border-radius: 5px;
-                cursor: pointer;
-                font-weight: bold;
-                font-size: 16px;
-                transition: all 0.3s ease;
-            }
+                        &:hover {
+                        background-color: #218838;
+                        }
+                    }
 
-            .upload-button {
-                background-color: #28a745;
-                color: white;
-                justify-content: center;
+                    .cancel-button {
+                        background-color: #6c757d;
+                        color: white;
+                        margin: 0;
 
-                &:hover {
-                background-color: #218838;
-                }
-            }
-
-            .cancel-button {
-                background-color: #6c757d;
-                color: white;
-                margin: 0 340px 0 230px;
-
-                &:hover {
-                background-color: #5a6268;
+                        &:hover {
+                        background-color: #5a6268;
+                        }
+                    }
+                    .delete-button{
+                        margin: 0;
+                        padding: 12px 24px;
+                    }
+                    }
                 }
             }
-            }
-        }
+
+            
         }
 
 
