--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -8,7 +8,8 @@ html {
 body{
     padding: 0;
     margin: 0;
-    width: 100vw;
+    min-width: 100vw;
+    max-width: 100vw;
     min-height: 100vh;
     background-color: black;
     color: white;
@@ -25,7 +26,7 @@ body{
     padding: 0;
     margin: 0;
     min-height: 60vh;
-    width: 100%;
+    max-width: 100%;
 
     @media (max-width: 400px) {
         max-width: 400px;
