Adição de paginação em várias páginas e validação de dados

--- a/frontend/src/pages/login/login.scss
+++ b/frontend/src/pages/login/login.scss
@@ -14,7 +14,7 @@ $fonte-principal: Verdana, Geneva, Tahoma, sans-serif;
   align-items: center;
   text-align: center;
   min-height: 60vh;
-  max-width: 1646px;
+  max-width: 100%;
   margin: 0;
   padding: 0;
   background-color: $cor-fundo;
