--- a/frontend/src/components/NavBar/navBar.scss
+++ b/frontend/src/components/NavBar/navBar.scss
@@ -159,6 +159,13 @@
           }
 
           li {
+            &.admin{
+              display: none;
+
+              &.loggedAdmin{
+                display: block;
+              }
+            }
             &.forms{
               display: none;
 
