--- a/frontend/src/pages/register/register.scss
+++ b/frontend/src/pages/register/register.scss
@@ -195,6 +195,37 @@ $fonte-principal: 'Poppins', sans-serif;
         }
       }
 
+      select{
+        font-size: 18px;
+        background-color: #111;
+        border: 1px solid #333;
+        border-radius: 20px;
+        width: 100%;
+        height: 51px;
+        padding: 0.6rem 1rem;
+        color: $cor-texto;
+        appearance: none;
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        background-image: url(../../assets/seta-cima.png);
+        background-repeat: no-repeat;
+        background-position: right 1rem center;
+        background-size: 20px;
+
+        &::placeholder {
+          color: #aaa;
+        }
+
+        &:focus {
+          border-color: $cor-principal;
+          outline: none;
+        }
+
+        &:hover {
+          border-color: #08c;
+        }
+      }
+
       input {
         font-size: 18px;
         background-color: #111;
