--- a/frontend/src/pages/home/home.scss
+++ b/frontend/src/pages/home/home.scss
@@ -5,80 +5,206 @@
   flex-direction: column;
 
   .apresentacao {
-  text-align: center; 
-  max-width: 900px;   
-  margin: 0 auto;     
-  padding: 20px;
+    text-align: center;
+    max-width: 80%;
+    margin: 0 auto;
+    padding: 20px;
 
-  .text{
-    justify-content: space-between;
-  }
-
-  p {
-    text-align: justify;
-    margin: 0 auto 20px auto;
-    line-height: 1.6;
-  }
-
-  .texto {
-    text-align: center; /* Mantém o texto das linhas acima centralizado */
-    font-style: italic;
-  }
-}
-
-
-  .butao {
-    display: inline-block;
-    position: relative;
-    overflow: hidden;
-    background-color: rgb(5, 131, 139);
-    color: white;
-    border: none;
-    padding: 10px 25px;
-    font-weight: 900;
-    font-size: 1.1rem;
-    border-radius: 25px;
-    cursor: pointer;
-    margin-top: 25px;
-    text-decoration: none;
-    transition: background-color 0.4s ease, transform 0.4s ease;
-
-    &:hover {
-      background: linear-gradient(
-        to right,
-        rgb(20, 20, 20),
-        rgb(40, 40, 40),
-        rgb(51, 51, 51)
-      );
-      transform: translateY(-2px) scale(1.1);
-      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+    .titulo {
+      font-size: 2rem;
+      margin-bottom: 20px;
     }
 
-    &::before {
-      content: "";
-      position: absolute;
-      inset: 0;
-      background: linear-gradient(
-        120deg,
-        transparent 0%,
-        rgba(255, 255, 255, 0.6) 50%,
-        transparent 100%
-      );
-      transform: translateX(-100%);
-      opacity: 0;
-      z-index: 0;
-      transition: transform 0.3s ease-in-out, opacity 0.3s ease;
+    .text {
+      justify-content: space-between;
     }
 
-    &:hover::before {
-      transform: translateX(100%);
-      opacity: 1;
+    p {
+      text-align: justify;
+      margin: 0 auto 20px auto;
+      font-size: 18px;
+      line-height: 1.5;
     }
 
-    &.logged{
-      display: none;
+    .texto {
+      text-align: center; /* Mantém o texto das linhas acima centralizado */
+      font-style: italic;
     }
 
-    
+    .conteudos {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-direction: row;
+      width: 100%;
+      margin-top: 100px;
+      margin-bottom: 20px;
+      gap: 70px;
+
+      .text{
+        width: 50%;
+
+        .titulo{
+          text-align: center;
+          font-size: 24px;
+          max-width: 70%;
+        }
+
+        p{
+          text-align: justify;
+          font-size: 18px;
+          max-width: 70%;
+          margin: 0;
+        }
+      }
+
+      .pre-cards {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        width: 50%;
+
+        .cards{
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          flex-direction: row;
+          width: 100%;
+          gap: 60px;
+
+          .first{
+           .butao {
+              display: inline-block;
+              position: relative;
+              overflow: hidden;
+              background-color: rgb(5, 131, 139);
+              color: white;
+              border: none;
+              padding: 10px 25px;
+              font-weight: 900;
+              font-size: 1.1rem;
+              border-radius: 25px;
+              cursor: pointer;
+              margin-top: 25px;
+              text-decoration: none;
+              transition: background-color 0.4s ease, transform 0.4s ease;
+
+              &:hover {
+                background: linear-gradient(
+                  to right,
+                  rgb(20, 20, 20),
+                  rgb(40, 40, 40),
+                  rgb(51, 51, 51)
+                );
+                transform: translateY(-2px) scale(1.1);
+                box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+              }
+
+              &::before {
+                content: "";
+                position: absolute;
+                inset: 0;
+                background: linear-gradient(
+                  120deg,
+                  transparent 0%,
+                  rgba(255, 255, 255, 0.6) 50%,
+                  transparent 100%
+                );
+                transform: translateX(-100%);
+                opacity: 0;
+                z-index: 0;
+                transition: transform 0.3s ease-in-out, opacity 0.3s ease;
+              }
+
+              &:hover::before {
+                transform: translateX(100%);
+                opacity: 1;
+              }
+
+              &.logged {
+                display: none;
+              }
+            }
+            
+            .h4{
+              display: block;
+
+              &.logged{
+                display: none;
+              }
+            }
+          }
+
+          .second{
+            .butao {
+              display: inline-block;
+              position: relative;
+              overflow: hidden;
+              background-color: rgb(5, 131, 139);
+              color: white;
+              border: none;
+              padding: 10px 25px;
+              font-weight: 900;
+              font-size: 1.1rem;
+              border-radius: 25px;
+              cursor: pointer;
+              margin-top: 25px;
+              text-decoration: none;
+              transition: background-color 0.4s ease, transform 0.4s ease;
+
+              &:hover {
+                background: linear-gradient(
+                  to right,
+                  rgb(20, 20, 20),
+                  rgb(40, 40, 40),
+                  rgb(51, 51, 51)
+                );
+                transform: translateY(-2px) scale(1.1);
+                box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+              }
+
+              &::before {
+                content: "";
+                position: absolute;
+                inset: 0;
+                background: linear-gradient(
+                  120deg,
+                  transparent 0%,
+                  rgba(255, 255, 255, 0.6) 50%,
+                  transparent 100%
+                );
+                transform: translateX(-100%);
+                opacity: 0;
+                z-index: 0;
+                transition: transform 0.3s ease-in-out, opacity 0.3s ease;
+              }
+
+              &:hover::before {
+                transform: translateX(100%);
+                opacity: 1;
+              }
+
+              &.logged {
+                display: none;
+              }
+            }
+
+            .h4{
+              display: block;
+
+              &.logged{
+                display: none;
+              }
+            }
+          }
+          .card {
+            width: 160px;
+            height: 160px;
+            border-radius: 50px;
+          }
+        }
+      }
+    }
   }
 }
