--- a/frontend/src/pages/home/home.scss
+++ b/frontend/src/pages/home/home.scss
@@ -207,4 +207,27 @@
       }
     }
   }
+
+  .parceiros{
+    margin-top: 5rem;
+    .imgs-parceiros {
+      display: flex;
+      justify-content: space-evenly;
+      align-items: center;
+      margin-top: 5rem;
+      img{
+        border-radius: 60px;
+        width: 200px;
+        height: 200px;
+        transition: all ease-in-out 0.3s;
+      
+        
+
+        &:hover{
+          box-shadow: 0px 0px 25px 2px rgba(255,255,255,0.7);
+          transform: scale(110%);
+        }
+      }
+    } 
+  }
 }
