--- a/frontend/src/pages/home/home.scss
+++ b/frontend/src/pages/home/home.scss
@@ -216,7 +216,7 @@
       align-items: center;
       margin-top: 5rem;
       img{
-        border-radius: 60px;
+        border-radius: 50px;
         width: 200px;
         height: 200px;
         transition: all ease-in-out 0.3s;
@@ -227,6 +227,60 @@
           box-shadow: 0px 0px 25px 2px rgba(255,255,255,0.7);
           transform: scale(110%);
         }
+      }
+    } 
+  }
+}
+// Parte responsiva 
+
+@media (max-width: 500px) {
+  .main{
+  .apresentacao {
+    .titulo{
+      font-size: 20px;
+    }
+
+    .text{
+      display: flex;
+      flex-direction: column;
+      gap: 40px;
+      
+      p{
+        font-size: 15px;
+      }
+    }
+
+    .conteudos {
+      flex-direction: column;
+
+      .text{
+        width: 100%;
+
+        .titulo{
+          min-width: 100%;
+          font-size: 18px;
+        }
+
+        p{
+          max-width: 100%;
+          font-size: 15px;
+        }
+      }
+
+      .pre-cards {
+        width: 100%;
+        }
+      }
+    }
+  }
+
+  .parceiros{
+    .imgs-parceiros {
+      margin-top: 15px;
+      img{
+        border-radius: 10px;
+        max-width: 100px;
+        max-height: 100px;
       }
     } 
   }
